--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,11 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+
+}
 /* Fuentes */
 
 /* font-family: 'Convergence', sans-serif; */
